changed mailing list properties to be valueLinks from the parent instead of doing a copy of it

--- a/locales/en/mailinglist.json5
+++ b/locales/en/mailinglist.json5
@@ -3,9 +3,9 @@
 
   description: "Description",
   descriptionPlaceholder: "Enter a description for this mailing list",
-
+  deleteMailingListWarning: "Warning! Deletion of a mailing list removes all users linked to it. $t(areYouSure)",
   updateMailingList: {
-    application: {
+    app: {
       name: {
         duplicate: "This name is already used"
       }
