--- a/locales/fr/mailinglist.json5
+++ b/locales/fr/mailinglist.json5
@@ -3,9 +3,10 @@
 
   description: "Description",
   descriptionPlaceholder: "Entrer une description pour cette liste de diffusion",
-
+  deleteMailingListWarning: "Attention! La suppression d'une liste de diffusion retire tous les utilisateurs associés.\
+ $t(areYouSure)",
   updateMailingList: {
-    application: {
+    app: {
       name: {
         duplicate: "Ce nom est déjà utilisé"
       }
