listing of registered mailing list for user and added backend routes to register and unregister

--- a/locales/en/mailinglist.json5
+++ b/locales/en/mailinglist.json5
@@ -4,6 +4,8 @@
   description: "Description",
   descriptionPlaceholder: "Enter a description for this mailing list",
   deleteMailingListWarning: "Warning! Deletion of a mailing list removes all users linked to it. $t(areYouSure)",
+  mailingListTab: "Mailing lists",
+
   updateMailingList: {
     app: {
       name: {
