--- a/locales/fr/mailinglist.json5
+++ b/locales/fr/mailinglist.json5
@@ -5,6 +5,8 @@
   descriptionPlaceholder: "Entrer une description pour cette liste de diffusion",
   deleteMailingListWarning: "Attention! La suppression d'une liste de diffusion retire tous les utilisateurs associés.\
  $t(areYouSure)",
+  mailingListTab: "Listes de diffusion",
+
   updateMailingList: {
     app: {
       name: {
