Forgot a method in the typings. Changed controllers to use the method directly instead of string Decided to sort the mailing list initially after external feedback

--- a/locales/fr/mailinglist.json5
+++ b/locales/fr/mailinglist.json5
@@ -3,8 +3,7 @@
 
   description: "Description",
   descriptionPlaceholder: "Entrer une description pour cette liste de diffusion",
-  deleteMailingListWarning: "Attention! La suppression d'une liste de diffusion retire tous les utilisateurs associés.\
- $t(areYouSure)",
+  deleteMailingListWarning: "Attention! La suppression d'une liste de diffusion retire tous les utilisateurs associés. $t(areYouSure)",
   mailingListTab: "Listes de diffusion",
 
   errors: {
