--- a/locales/fr/mailinglist.json5
+++ b/locales/fr/mailinglist.json5
@@ -15,8 +15,8 @@
     validation: {
       name: {
         empty: "Le nom ne peut être vide",
-        tooShort: "Le nom doit faire un minimum de __variable__ caractères",
-        tooLong: "Le nom doit faire un maximum de __variable__ caractères"
+        tooShort: "Le nom doit contenir un minimum de __variable__ caractères",
+        tooLong: "Le nom doit contenir un maximum de __variable__ caractères"
       }
     }
   }
