--- a/locales/en/mailinglist.json5
+++ b/locales/en/mailinglist.json5
@@ -6,14 +6,14 @@
   deleteMailingListWarning: "Warning! Deleting a mailing list removes all users linked to it. $t(areYouSure)",
   mailingListTab: "Mailing lists",
 
+  showAtRegistrationTooltip: "Show this mailing in the registration form for new users",
+  showAtRegistrationTooltip_set: "$t(mailinglist::showAtRegistrationTooltip)",
+  showAtRegistrationTooltip_unset: "Do not $t(mailinglist::showAtRegistrationTooltip)",
+
   errors: {
     app: {
       name: {
-        duplicate: "This name is already used"
-      }
-    },
-    validation: {
-      name: {
+        duplicate: "This name is already used",
         empty: "Name cannot be blank",
         tooShort: "Name must be at least __variable__ characters long",
         tooLong: "Name must be at most __variable__ characters long"
