--- a/locales/en/mailinglist.json5
+++ b/locales/en/mailinglist.json5
@@ -10,6 +10,9 @@
   showAtRegistrationTooltip: "Show this mailing in the registration form for new users",
   registerError: "Error registering user to mailing lists",
 
+  config: "Configurations",
+  globalEmail: "Primary email",
+
   errors: {
     app: {
       name: {
