can now edit the mailing list configurations in the frontend

--- a/locales/en/mailinglist.json5
+++ b/locales/en/mailinglist.json5
@@ -13,6 +13,9 @@
   config: "Configurations",
   globalEmail: "Primary email",
 
+  config: "Configurations",
+  globalEmail: "Primary email",
+
   errors: {
     app: {
       name: {
