successfully sent emails to mailing list

--- a/locales/en/mailinglist.json5
+++ b/locales/en/mailinglist.json5
@@ -1,5 +1,6 @@
 {
   adminEditWelcome: "Mailing Lists",
+  sendEmailWelcome: "Sending email",
 
   description: "Description",
   descriptionPlaceholder: "Enter a description for this mailing list",
@@ -15,6 +16,7 @@
 
   config: "Configurations",
   globalEmail: "Primary email",
+  subject: "Subject",
 
   errors: {
     app: {
