--- a/locales/en/mailinglist.json5
+++ b/locales/en/mailinglist.json5
@@ -8,6 +8,7 @@
   mailingLists: "Mailing lists",
 
   showAtRegistrationTooltip: "Show this mailing in the registration form for new users",
+  registerError: "Error registering user to mailing lists",
 
   errors: {
     app: {
