--- a/locales/fr/mailinglist.json5
+++ b/locales/fr/mailinglist.json5
@@ -8,6 +8,7 @@
   mailingLists: "Listes de diffusion",
 
   showAtRegistrationTooltip: "Afficher cette liste de diffusion dans le formulaire d'inscription des nouveaux utilisateurs",
+  registerError: "Erreur survenue pendant l'inscription aux listes de diffusion",
 
   errors: {
     app: {
