--- a/locales/en/mailinglist.json5
+++ b/locales/en/mailinglist.json5
@@ -8,7 +8,7 @@
   mailingListTab: "Mailing lists",
   mailingLists: "Mailing lists",
 
-  showAtRegistrationTooltip: "Show this mailing in the registration form for new users",
+  showAtRegistrationTooltip: "Show this mailing in the registration form for new users. Removes all permissions linked to this mailing list",
   registerError: "Error registering user to mailing lists",
 
   config: "Configurations",
@@ -17,6 +17,9 @@
   config: "Configurations",
   globalEmail: "Primary email",
   subject: "Subject",
+
+  permissionChoiceFor: "Permissions for",
+  editPermissionsTooltip: "Modify permissions required for this mailing list",
 
   errors: {
     app: {
