--- a/locales/fr/mailinglist.json5
+++ b/locales/fr/mailinglist.json5
@@ -8,7 +8,7 @@
   mailingListTab: "Listes de diffusion",
   mailingLists: "Listes de diffusion",
 
-  showAtRegistrationTooltip: "Afficher cette liste de diffusion dans le formulaire d'inscription des nouveaux utilisateurs",
+  showAtRegistrationTooltip: "Afficher cette liste de diffusion dans le formulaire d'inscription des nouveaux utilisateurs. Retire toutes les permissions de cette liste de diffusion.",
   registerError: "Erreur survenue pendant l'inscription aux listes de diffusion",
 
   config: "Configurations",
@@ -17,6 +17,9 @@
   config: "Configurations",
   globalEmail: "Courriel principal",
   subject: "Sujet",
+
+  permissionChoiceFor: "Permissions pour",
+  editPermissionsTooltip: "Modifier les permissions pour cette liste de diffusion",
 
   errors: {
     app: {
